2016-02-05  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure: Add submodule check suggested by Elliott
	Mitchell.

2015-11-30  perillamint  <perillamint@gentoo.moe>

	* src/openpgp.c (card_thread): Fix offset of bConfirmPIN.

2015-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.9.

	* src/openpgp-do.c (proc_key_import): Fix error return.
	(rw_algorithm_attr): Check it's not ALGO_RSA2K.

2015-09-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.8.

2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.10.

	* src/main.c (main): Don't join after calling ccid_usb_reset.
	* src/usb-icc.c (ccid_thread): Don't finish on reset, but
	keep running.

	* src/usb_ctrl.c (usb_cb_device_reset): Stop the interface.

	* src/usb_stm32f103.c (std_set_interface): Bug fix for conf.

	* src/gnuk.ld.in (__process3_stack_size__): Increase stack size of
	GPG thread.
	(__process2_stack_size__): Increase stack size of RNG.
	(__process4_stack_size__): Increase stack size of USB.
	(__main_stack_size__): Decrease stack size of exception handlers.
	(__process1_stack_size__): Decrease stack size of CCID.

2015-09-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (LED_GNUK_EXEC): New.
	* src/main.c, src/usb-icc.c, src/usb_ctrl.c: icc_state_p access
	clean up.

2015-09-11  Niibe Yutaka  <gniibe@fsij.org>

	* tool/upgrade_by_passwd.py (main): Loop until finding reGNUal
	device.

2015-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-rsa.c (rsa_cleanup): New.
	(rsa_sign, rsa_decrypt, rsa_genkey): Allow cancellation.
	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Cancellation
	is handled by each functions in case of RSA.

2015-09-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.h: Update from Chopstx.
	* src/adc_stm32f103.c: Update from NeuG.

	* src/openpgp.c (process_command_apdu): Protect command execution
	against cancelling the execution thread.
	(cmd_pso, cmd_internal_authenticate): Allow cancellation.

	* src/main.c (main): Handle LED_USB_RESET.
